--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="8"
-    android:versionName="1.0.8">
+    android:versionCode="12"
+    android:versionName="1.0.12">
 
 
 
@@ -48,7 +48,7 @@
         android:hardwareAccelerated="true"
         android:name=".CustomApplcation"
         android:allowBackup="true"
-        android:icon="@drawable/favicon"
+        android:icon="${app_icon}"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.JingyuPay"
@@ -85,7 +85,6 @@
             android:name=".Main22Activity"
             android:exported="true"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden">
