--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="16"
-    android:versionName="1.0.16">
+    android:versionCode="19"
+    android:versionName="1.0.19">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -96,6 +96,17 @@
 
 
         </activity>
+
+        <activity
+            android:name=".AddWechatActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden">
+
+        </activity>
+
 
         <service
             android:name=".DaemonService"
