--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="21"
-    android:versionName="1.0.21">
+    android:versionCode="22"
+    android:versionName="1.0.22">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -273,7 +273,7 @@
         <activity
             android:screenOrientation="portrait"
 
-            android:name="com.jingyu.pay.MainActivity"
+            android:name=".pay.ui.login.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden">
