--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="34"
-    android:versionName="1.0.34">
+    android:versionCode="36"
+    android:versionName="1.0.36">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -52,13 +52,20 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".pay.ui.dashboard.ConfirmOrderActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:name=".pay.ui.payment.PaymentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <!-- <activity -->
+        <activity
+            android:name=".pay.ui.dashboard.ConfirmOrderActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity> <!-- <activity -->
         <!-- android:name=".ui.login.DetailActivity" -->
         <!-- android:exported="true" -->
         <!-- android:label="@string/title_activity_home" -->
@@ -101,7 +108,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden"></activity>
+            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden" />
 
         <service
             android:name=".DaemonService"
