--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="38"
-    android:versionName="1.0.38">
+    android:versionCode="40"
+    android:versionName="1.0.40">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -44,7 +44,7 @@
         android:name=".CustomApplcation"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="${app_icon}"
+        android:icon="@drawable/img_otc"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
