--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,4 +194,8 @@ dependencies {
 
     implementation 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如4.0.3
 
+
+    implementation 'com.gongwen:marqueelibrary:1.1.3'
+
+
 }
