--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
             buildConfigField "String", "SETTING_DOMIN", "\"https://za.gr.nozen99.com/app/\""
             buildConfigField "String", "API_DOMAIN", "\"https://portal.broslpay.com/\""
             buildConfigField "String", "ELK_TYPE", "\"payhelper\""
-            buildConfigField "String", "UPDATE_URL", "\"https://pay.17otc.com/exrate.json\""
+            buildConfigField "String", "UPDATE_URL", "\"https://pay.17otc.com/apk/version.json\""
             buildConfigField "String", "md5key", "\"2io#ejQO\""
             buildConfigField "String", "API_URL", "\"https://api.17otc.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://pay.17otc.com/exrate.json\""
