--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
         flavorDimensions "versionCode"
         multiDexEnabled true
-        applicationId "com.jingyu.otc"
+        applicationId "com.duobao"
         minSdkVersion 24
         targetSdkVersion 30
         compileOptions {
@@ -50,15 +50,15 @@ android {
 
         }
         otcPay {
-            resValue "string", "app_name", "聚宝OTC"
-            applicationId "com.jingyu.otc"
-            manifestPlaceholders = [app_icon: "@drawable/img_otc"]
+            resValue "string", "app_name", "多宝"
+            applicationId "com.duobao"
+            manifestPlaceholders = [app_icon: "@drawable/img_duobao"]
             buildConfigField "String", "HTTP_DOMAIN", "\"https://api01.gr.nozen99.com/\""
             buildConfigField "String", "ENVIROMENT_NAME", "\"env_cfg_nozen99_gr\""
             buildConfigField "String", "SETTING_DOMIN", "\"https://za.gr.nozen99.com/app/\""
             buildConfigField "String", "API_DOMAIN", "\"https://portal.broslpay.com/\""
             buildConfigField "String", "ELK_TYPE", "\"payhelper\""
-            buildConfigField "String", "UPDATE_URL", "\"https://pay.colorwin.com/apk/version.json\""
+            buildConfigField "String", "UPDATE_URL", "\"https://pay.colorwin.com/apk/duobaoversion.json\""
             buildConfigField "String", "md5key", "\"R:M'3p&_\""
             buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
