--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="5"
-    android:versionName="1.0.5">
+    android:versionCode="6"
+    android:versionName="1.0.6">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -279,7 +279,20 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
+        <activity
+            android:name=".UploadPhotoActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden" />
+        <activity
+            android:name=".UploadAliPayPhotoActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden" />
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
