--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,18 +32,18 @@ android {
     }
     productFlavors {
         luckyPay {
-            resValue "string", "app_name", "吉利"
-            applicationId "com.jingyu.pay"
-            manifestPlaceholders = [app_icon: "@drawable/favicon"]
+            resValue "string", "app_name", "多宝"
+            applicationId "com.duobao"
+            manifestPlaceholders = [app_icon: "@drawable/img_duobao"]
             buildConfigField "String", "HTTP_DOMAIN", "\"https://api01.gr.nozen99.com/\""
             buildConfigField "String", "ENVIROMENT_NAME", "\"env_cfg_nozen99_gr\""
             buildConfigField "String", "SETTING_DOMIN", "\"https://za.gr.nozen99.com/app/\""
             buildConfigField "String", "API_DOMAIN", "\"https://portal.broslpay.com/\""
             buildConfigField "String", "ELK_TYPE", "\"payhelper\""
-            buildConfigField "String", "UPDATE_URL", "\"https://pay.channel-lucky.com/apk/version.json\""
-            buildConfigField "String", "md5key", "\"2io#ejQO\""
-            buildConfigField "String", "API_URL", "\"https://api.channel-sign.com/\""
-            buildConfigField "String", "EXRATE_URL", "\"https://pay.channel-lucky.com/exrate.json\""
+            buildConfigField "String", "UPDATE_URL", "\"https://pay.colorwin.com/apk/duobaoversion.json\""
+            buildConfigField "String", "md5key", "\"R:M'3p&_\""
+            buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
+            buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
 
 
 
