--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,11 +44,11 @@
         android:name=".CustomApplcation"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="${app_icon}"
+        android:icon="${APPICON}"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.JingyuPay"
+        android:theme="${APPTHEME}"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
