--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
             buildConfigField "String", "md5key", "\"R:M'3p&_\""
             buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
+            buildConfigField "String", "VERSIONNUMBER", "\"v8\""
 
 
 
@@ -65,6 +66,7 @@ android {
             buildConfigField "String", "md5key", "\"R:M'3p&_\""
             buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
+            buildConfigField "String", "VERSIONNUMBER", "\"v8\""
 
 
         }
@@ -87,6 +89,10 @@ android {
             buildConfigField "String", "md5key", "\"2io#ejQO\""
             buildConfigField "String", "API_URL", "\"https://api.17otc.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://pay.17otc.com/exrate.json\""
+            buildConfigField "String", "VERSIONNUMBER", "\"v9\""
+
+
+
 
 
         }
