--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="60"
-    android:versionName="1.0.60">
+    android:versionCode="63"
+    android:versionName="1.0.63">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -35,8 +35,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
@@ -54,9 +53,16 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:name=".pay.ui.payment.PaymentActivity"
+            android:name=".pay.ui.money.TransferMoneyActivity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".pay.ui.payment.PaymentActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -94,9 +100,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden">
-
-        </activity>
+            android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden" />
         <activity
             android:name=".AddWechatActivity"
             android:exported="true"
@@ -118,6 +122,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="adjustPan|adjustUnspecified|stateHidden" />
+
         <service
             android:name=".DaemonService"
             android:enabled="true"
@@ -177,7 +182,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AddBankQrcodeActivity"
             android:exported="false"
