--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="74"
-    android:versionName="1.0.74">
+    android:versionCode="100"
+    android:versionName="1.0.100">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -378,16 +378,16 @@
         </provider>
 
 
-<!--        <service-->
-<!--            android:name=".pay.ui.login.MyNotificationListenerService"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"-->
-<!--            android:exported="true">-->
+        <service
+            android:name=".pay.ui.login.MyNotificationListenerService"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+            android:exported="true">
 
-<!--        <intent-filter>-->
-<!--                <action android:name="android.service.notification.NotificationListenerService" />-->
-<!--            </intent-filter>-->
-<!--        </service>-->
+        <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
 
 
     </application>
