--- a/app/build.gradle
+++ b/app/build.gradle
@@ -247,12 +247,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-
-    implementation 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如4.0.3
-
-
     implementation 'com.gongwen:marqueelibrary:1.1.3'
     implementation 'com.pixelcarrot.base64image:base64image:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
 
