--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,11 @@ android {
             buildConfigField "String", "SETTING_DOMIN", "\"https://za.gr.nozen99.com/app/\""
             buildConfigField "String", "API_DOMAIN", "\"https://portal.broslpay.com/\""
             buildConfigField "String", "ELK_TYPE", "\"payhelper\""
-            buildConfigField "String", "UPDATE_URL", "\"https://pay.colorwin.com/apk/duobaoversion.json\""
+            buildConfigField "String", "UPDATE_URL", "\"https://pay.17otc.com/apk/otc/duobaoversion.json\""
             buildConfigField "String", "md5key", "\"R:M'3p&_\""
             buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
-            buildConfigField "String", "VERSIONNUMBER", "\"v8\""
+            buildConfigField "String", "VERSIONNUMBER", "\"v9\""
             buildConfigField "String", "APPNAME", "\"多宝\""
 
 
@@ -64,11 +64,11 @@ android {
             buildConfigField "String", "SETTING_DOMIN", "\"https://za.gr.nozen99.com/app/\""
             buildConfigField "String", "API_DOMAIN", "\"https://portal.broslpay.com/\""
             buildConfigField "String", "ELK_TYPE", "\"payhelper\""
-            buildConfigField "String", "UPDATE_URL", "\"https://pay.colorwin.com/apk/version.json\""
+            buildConfigField "String", "UPDATE_URL", "\"https://pay.17otc.com/apk/otc/version.json\""
             buildConfigField "String", "md5key", "\"R:M'3p&_\""
             buildConfigField "String", "API_URL", "\"https://api.colorwin.com/\""
             buildConfigField "String", "EXRATE_URL", "\"https://api.colorwin.com/exrate.json\""
-            buildConfigField "String", "VERSIONNUMBER", "\"v8\""
+            buildConfigField "String", "VERSIONNUMBER", "\"v9\""
             buildConfigField "String", "APPNAME", "\"聚宝OTC\""
 
 
