--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tools.payhelper"
-    android:versionCode="1110"
-    android:versionName="1.1.10">
+    android:versionCode="1116"
+    android:versionName="1.1.16">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -95,7 +95,10 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity> <!-- <activity -->
+        </activity>
+
+
+        <!-- <activity -->
         <!-- android:name=".ui.login.DetailActivity" -->
         <!-- android:exported="true" -->
         <!-- android:label="@string/title_activity_home" -->
@@ -364,6 +367,15 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name="com.tools.payhelper.pay.CrashDetailActivity"
+            android:exported="false"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
